--- a/latex/doc/pkuthss.tex
+++ b/latex/doc/pkuthss.tex
@@ -1,3 +1,4 @@
+
 % Copyright (c) 2008-2009 solvethis
 % Copyright (c) 2010-2011 Casper Ti. Vector
 % Public domain.
@@ -24,12 +25,13 @@
 	eauthor={Casper Ti.\ Vector},
 	studentid={00910???},
 	date={二〇一一年四月},
-	school={化学与分子工程学院},
+	school={化学与分子sec:instsec:instssec:miscssec:misc工程学院},
 	cmajor={化学},emajor={Chemistry},direction={理论和计算化学},
 	cmentor={XX 教授},ementor={Prof.\ XX},
 	ckeywords={\LaTeX2e{}，排版，文档类，\CTeX{}},
 	ekeywords={\LaTeX2e{}, typesetting, document class, \CTeX{}},
 }
+
 
 \begin{document}
 	% 以下为正文之前的部分。
@@ -46,6 +48,9 @@
 
 	% 以下为正文。
 	\mainmatter
+
+
+
 
 	% 绪言。
 	\include{chap/introduction}
